# sena

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  INVESTOR_DEMO.md  LICENSE  Makefile  README.md  ROADMAP.md  docker-compose-monitoring.yml  docker-compose.yml  product_surface_inventory.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  maturity-scorecard.yml
benchmarks/: test_bench_evaluate.py
docs/: API_IDEMPOTENCY_CONTRACT.md  ARCHITECTURE.md  ARCHITECTURE_RULES.md  ASYNC_EXECUTION.md  AUDIT_DURABILITY.md  AUDIT_GUARANTEES.md  AUDIT_VERIFICATION_GUIDE.md  AUTH_MODEL.md  A_GRADE_PILOT_READY.md  BACKUP.md  BUNDLE_SIGNING.md  CANONICAL_ARTIFACT_CONTRACT.md  CANONICAL_WORKFLOW.md  CLAIM_MATRIX_SUPPORTED_TRUTH_PASS.md  COMPETITIVE_ADVANTAGE.md  CONTROL_PLANE.md  COOKBOOK.md  CREDIBLE_PILOT_PROFILE.md  DAY2_OPERATIONS.md  DECISION_REVIEW_PACKAGES.md  DEPLOYMENT.md  DEPLOYMENT_PROFILES.md  DESIGN_PARTNER_READY.md  DOCS_CONSISTENCY_REPORT.md  EVALUATOR_MODULE_BOUNDARIES.md  EXPERIMENTAL_INDEX.md  FAILURE_MODE_MATRIX.md  FINAL_MESSAGING_DIFF_SUMMARY.md  FLAGSHIP_WORKFLOW.md  FUNDRAISING_DECK.md  INCIDENT_RESPONSE_AND_BREACH_NOTIFICATION.md  INDEX.md  INTEGRATION_ABSTRACTION.md  INTERNAL_SOUNDNESS_GAP_ANALYSIS.md  INTERNAL_SOUNDNESS_REQUIRED_NOW_TASKS.md  INVESTOR_PITCH.md  LABS.md  MATURITY_SCORECARD.md  MIGRATION.md  MIGRATIONS.md  (+33 more)
docs/archive/: legacy_vision.md
docs/blog/: langchain_integration.md
docs/examples/: embedded_rules_vs_sena.md  payment-approval.md  policy_with_exceptions.yaml  portable_policy_pack_jira_servicenow.md  servicenow_change_governance_pack.md
docs/integrations/: JIRA.md  SERVICENOW.md  SUPPORTED_PATH_READINESS_CHECKLIST.md
docs/labs/: ENTERPRISE_GAP_ANALYSIS.md  FUNDRAISING_DECK.md  INVESTOR_PITCH.md
examples/: README.md  basic_usage.py  gated_promotion_flow.sh  simulation_scenarios.json
examples/design_partner_reference/: README.md  demo_15m.sh  operator_runbook.md  run_reference.py
examples/flagship/: README.md  evaluate_payload.json  run_flagship.py  servicenow_webhook_payload.json
examples/k8s_admission_demo/: DEMO_SCRIPT.md  INVESTOR_DECK.md  (+4 more)
monitoring/: prometheus.yml
scripts/: backup.py  backup_policy_registry.py  benchmark_embedded_rules_vs_sena.py  bump_version.py  check_architecture_concentration.py  check_design_partner_ready.py  dead_letter_admin.py  generate_audit_tamper_fixture.py  generate_evidence_pack.py  generate_integration_confidence_matrix.py  generate_integration_pilot_pack.py  generate_pilot_evidence.py  generate_sqlite_reliability_evidence.py  generate_traffic.py  load_test.py  maturity_scorecard.py  migrate_policy_registry.py  refresh_replay_corpus.py  registry_backup_restore_drill.py  restore.py  restore_policy_registry.py  verify_policy_registry.py
tests/: test_ai_governance.py  test_api.py  test_api_app_factory.py  test_api_auth_providers.py  test_api_authz_security.py  test_api_dependencies.py  test_api_middleware.py  test_architecture_import_boundaries.py  test_async_jobs.py  test_audit_chain_adversarial.py  test_audit_chain_and_schema.py  test_audit_evidentiary.py  test_audit_merkle.py  test_audit_sinks.py  test_bundle_release_signing.py  test_cli.py  test_cli_api_consistency.py  test_concurrency.py  test_concurrency_races.py  test_data_governance.py  test_decision_review_package.py  test_design_partner_reference.py  test_determinism_contract.py  test_dlq.py  test_engine_escalation.py  test_engine_precedence.py  test_enums.py  test_evaluator_characterization_refactor.py  test_evaluator_components.py  test_evaluator_property.py  test_evaluator_stages.py  test_evidence_pack.py  test_exception_overlay.py  test_experta_adapter.py  test_explanation_trace.py  test_failure_modes_and_migration_safety.py  test_flagship_example.py  test_flagship_workflows.py  test_idempotency.py  test_integration_abstraction.py  (+41 more)
(+232 files in other folders)
