[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sena"
version = "0.2.0"
description = "Deterministic policy-enforcement engine for AI-assisted compliance workflows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SENA Contributors" }]
keywords = ["ai", "compliance", "policy-engine", "safety", "auditability"]
dependencies = [
  "fastapi>=0.111",
  "pydantic>=2.7",
  "PyYAML>=6.0",
  "uvicorn>=0.30"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.5"
]

[project.scripts]
sena-eval = "sena.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-ra", "--strict-markers", "--strict-config"]
