[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sena"
dynamic = ["version"]
description = "Alpha deterministic policy enforcement engine for AI-assisted enterprise approval workflows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "SENA Contributors" }]
keywords = ["compliance", "policy-engine", "workflow", "audit", "deterministic"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Office/Business :: Financial",
]
dependencies = [
  "pydantic>=2.7",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
api = [
  "fastapi>=0.111",
  "prometheus-client>=0.20",
  "uvicorn>=0.30",
]
legacy = []
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "mypy>=1.10",
  "ruff>=0.5",
  "httpx>=0.28",
  "hypothesis>=6.0",
]

[project.scripts]
sena-eval = "sena.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = { attr = "sena.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-ra", "--strict-markers", "--strict-config"]


[tool.coverage.run]
source = ["src/sena"]

[tool.coverage.report]
fail_under = 80
show_missing = true
